added action links

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         .hidden{display:none;}
         .cmLockContainer{border:1px solid #000}
         .cmLockSubContainer{}
-        .explanation{margin:1em;padding-bottom:1em;border-bottom:1px solid #000}
+        .actions,.explanation{margin:1em;padding-bottom:1em;border-bottom:1px solid #000}
+        ul.actionList{margin:.5em}
+        ul.actionList li{display:inline;float:left}
         .explanation a{color:#33f}
         .explanation ul{padding-top:.5em}
         .explanation ul li{padding-bottom:.5em}
@@ -26,6 +28,14 @@
     </head>
     <body>
         <h1>cmlocksize plugin for jQuery</h1>
+<div class="actions">
+<ul class="actionList">
+<li><a href="http://github.com/coxmediagroup/jquery-locksize">Fork Locksize on GitHub</a></li>&nbsp;|&nbsp;
+<li><a href="http://github.com/coxmediagroup/jquery-locksize/tarball/master">Download tarball</a></li>&nbsp;|&nbsp;
+<li><a href="http://github.com/coxmediagroup/jquery-locksize/zipball/master">Download zipball</a></li>
+<li></li>
+</ul>
+</div>
         <div class="explanation">
             <p>When using cmlocksize on this example page, a border is shown to illustrate the locking and then animating sizes as well as the presence and removal of the size locking wrapper.</p>
             <p>&#42; cmlocksize requires jQuery 1.4.</p>
