fixed action list

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <h1>cmlocksize plugin for jQuery</h1>
 <div class="actions">
 <ul class="actionList">
-<li><a href="http://github.com/coxmediagroup/jquery-locksize">Fork Locksize on GitHub</a></li>&nbsp;|&nbsp;
-<li><a href="http://github.com/coxmediagroup/jquery-locksize/tarball/master">Download tarball</a></li>&nbsp;|&nbsp;
+<li><a href="http://github.com/coxmediagroup/jquery-locksize">Fork Locksize on GitHub</a>&nbsp;|&nbsp;</li>
+<li><a href="http://github.com/coxmediagroup/jquery-locksize/tarball/master">Download tarball</a>&nbsp;|&nbsp;</li>
 <li><a href="http://github.com/coxmediagroup/jquery-locksize/zipball/master">Download zipball</a></li>
 <li></li>
 </ul>
