fixed link color

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         .actions,.explanation{margin:1em;padding-bottom:1em;border-bottom:1px solid #000}
         ul.actionList{margin:.5em}
         ul.actionList li{display:inline;float:left}
-        .explanation a{color:#33f}
+        .actions a,.explanation a{color:#33f}
         .explanation ul{padding-top:.5em}
         .explanation ul li{padding-bottom:.5em}
         pre{border:1px dashed #333;color:#000;background-color:#eee;margin:.5em 2em;padding:.5em}
