fixed html errors in index

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>CMLockSize</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <style type="text/css">html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, a, abbr, acronym, address, big, cite, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center,fieldset, dl, dt, dd, ol, ul, li, form, label, caption {margin: 0;padding: 0;border: 0;outline:0;font-family:Arial,Helvetica,sans-serif;text-align:left;color:#000;white-space:normal}
         input, textarea, select {font-family:Arial,Helvetica,Sans-serif}
         body {line-height: 1.2em;color:#999;font-size:10pt}
@@ -61,6 +61,7 @@ cmg.query('#cmImage').cmlocksize('destroy'); <span class="note">// destroy the i
                 <li>Click <a href="javascript:void(0);" class="cmImageChange">here</a> (or on the image itself) to see the effect. Repeated clicks will continue to demonstrate the behavior.</li>
                 <li><a href="javascript:void(0);" id="destroy">Destroy instance of cmlocksize</a></li>
                 <li><a href="js/jquery/jquery.cmlocksize.js" target="_blank">View jquery.cmlocksize.js</a></li>
+            </ul>
         </div>
         
 
