fixed html error in example

--- a/locksize-example.html
+++ b/locksize-example.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <title>CMLockSize</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -51,6 +51,7 @@ cmg.query('#cmImage').cmlocksize('destroy'); <span class="note">// destroy the i
                 <li>Click <a href="javascript:void(0);" class="cmImageChange">here</a> (or on the image itself) to see the effect. Repeated clicks will continue to demonstrate the behavior.</li>
                 <li><a href="javascript:void(0);" id="destroy">Destroy instance of cmlocksize</a></li>
                 <li><a href="js/jquery/jquery.cmlocksize.js" target="_blank">View jquery.cmlocksize.js</a></li>
+            </ul>
         </div>
         
 
