--- a/locksize-example.html
+++ b/locksize-example.html
@@ -30,11 +30,11 @@
             <p>When using cmlocksize on this example page, a border is shown to illustrate the locking and then animating sizes as well as the presence and removal of the size locking wrapper.</p>
             <p>&#42; cmlocksize requires jQuery 1.4.</p>
             <h4>Use:</h4>
-            <pre><code>cmg.query('#cmImage').cmlocksize({
+            <pre><code>$('#cmImage').cmlocksize({
                 animSpeed: 250, <span class="note">// speed of fade and resize animations in milliseconds</span>
                 delay: 100, <span class="note">// delay before resizing in milliseconds</span>
                 onLock: function(){ <span class="note">// a function to be run once the element size is locked</span>
-                        cmg.query(this).attr('src','img/' + images[pointer]);
+                        $(this).attr('src','img/' + images[pointer]);
                     },
                 onUnlock: function(){ <span class="note">// a function to be run once the resizing has finished</span>
                     //nothing
@@ -43,9 +43,9 @@
                 autoUnlock: true <span class="note">// if set to false, you can call the unlock method when you want to</span>
                 });</code></pre>
                 <h4>Methods:</h4>
-                <pre><code>cmg.query('#cmImage').cmlocksize('lockOn'); <span class="note">// instantiate the lock</span>
-cmg.query('#cmImage').cmlocksize('lockOff'); <span class="note">// programmatically release the lock</span>
-cmg.query('#cmImage').cmlocksize('destroy'); <span class="note">// destroy the instance of cmlocksize</span></code></pre>
+                <pre><code>$('#cmImage').cmlocksize('lockOn'); <span class="note">// instantiate the lock</span>
+$('#cmImage').cmlocksize('lockOff'); <span class="note">// programmatically release the lock</span>
+$('#cmImage').cmlocksize('destroy'); <span class="note">// destroy the instance of cmlocksize</span></code></pre>
             
             <ul>
                 <li>Click <a href="javascript:void(0);" class="cmImageChange">here</a> (or on the image itself) to see the effect. Repeated clicks will continue to demonstrate the behavior.</li>
@@ -63,42 +63,35 @@ cmg.query('#cmImage').cmlocksize('destroy'); <span class="note">// destroy the i
 
 
 <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script>
-<script type="text/javascript">
-    /* <![CDATA[ */
-    var cmg = {};
-    cmg.query = jQuery.noConflict(true);
-    var mediaurl = "/media/static/web/common/";
-    /* ]]> */
-</script>
 <script src="js/jquery/jquery.cmlocksize.js" type="text/javascript"></script>
 <script type="text/javascript">
 var pointer = 0;
 var images = ['sgl.png', 'gulls.png', 'greenarrow.png', 'birds.png', 'silh.png', 'sunset.png', 'three.png', 'twogulls.png', 'highres_15632461.jpg', 'de.png', 'highres_15632460.png'];
 
-cmg.query(document).ready(function(){
+$(document).ready(function(){
 
-    cmg.query('#destroy').click(function(){
-        cmg.query('#cmImage').cmlocksize('destroy');
+    $('#destroy').click(function(){
+        $('#cmImage').cmlocksize('destroy');
     });
 
-    cmg.query('.cmImageChange').click(function(){
+    $('.cmImageChange').click(function(){
 
         pointer++;
         pointer = pointer == images.length ? 0 : pointer;
 
-        cmg.query('#cmImage').cmlocksize({
+        $('#cmImage').cmlocksize({
             animSpeed: 250,
             delay: 100,
             onLock: function(){
-                    cmg.query(this).attr('src','img/' + images[pointer]);
+                    $(this).attr('src','img/' + images[pointer]);
                 },
             onUnlock: function(){},
             fade: true,
             autoUnlock: true
             });
 
-            cmg.query('#cmImage').cmlocksize('lockOn');
-            //cmg.query('#cmImage').cmlocksize('lockOff');
+            $('#cmImage').cmlocksize('lockOn');
+            //$('#cmImage').cmlocksize('lockOff');
     });
 
 });
